--- a/update/tasks/debian.yml
+++ b/update/tasks/debian.yml
@@ -1,16 +1,20 @@
 - name: Run the equivalent of "apt-get update" as a separate step
+  become: true
   apt:
     update_cache: yes
 
 - name: Update all packages to the latest version
+  become: true
   apt:
     upgrade: dist
 
 - name: Upgrade all packages to the latest version
+  become: true
   apt:
     name: "*"
     state: latest
 
 - name: Remove dependencies that are no longer required
+  become: true
   apt:
     autoremove: yes
