--- a/docker_setup/tasks/debian.yml
+++ b/docker_setup/tasks/debian.yml
@@ -1,5 +1,6 @@
 # sudo apt install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common
 - name: Install required system packages
+  become: true
   apt:
     name:
       - apt-transport-https
@@ -12,23 +13,27 @@
 
 # curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
 - name: Add Docker’s official GPG key
+  become: true
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
 
 # sudo apt-key fingerprint 0EBFCD88
 - name: Verify that we have the key with the fingerprint
+  become: true
   apt_key:
     id: 0EBFCD88
     state: present
 
 # sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
 - name: Set up the stable repository
+  become: true
   apt_repository:
     repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable
     update_cache: yes
 
 # sudo apt-get install docker-ce docker-ce-cli containerd.io
 - name: Install docker engine
+  become: true
   apt:
     name:
       - docker-ce
