--- a/hostname/tasks/main.yml
+++ b/hostname/tasks/main.yml
@@ -2,6 +2,7 @@
 # This playbook sets hostname
 
 - name: ensure hostname is not an ip
+  become: true
   when: inventory_hostname is not regex("^(?:\d{1,3}\.){3}\d{1,3}$")
   block:
     - name: Change hostname
