--- a/docker_setup/tasks/debian.yml
+++ b/docker_setup/tasks/debian.yml
@@ -28,7 +28,7 @@
 - name: Set up the stable repository
   become: true
   apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable
+    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable
     update_cache: yes
 
 # sudo apt-get install docker-ce docker-ce-cli containerd.io
