--- a/docker_setup/tasks/main.yml
+++ b/docker_setup/tasks/main.yml
@@ -30,3 +30,13 @@
     owner: root
     group: root
     mode: 0755
+
+# sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+- name: Create a symbolic link for docker-compose
+  become: true
+  file:
+    src: /usr/local/bin/docker-compose
+    dest: /usr/bin/docker-compose
+    owner: root
+    group: root
+    state: link
