--- a/elasticsearch/defaults/main.yml
+++ b/elasticsearch/defaults/main.yml
@@ -1,13 +1,16 @@
+JVM_HEAP_SIZE: 2g
+
 ELASTICSEARCH_VERSION: 7.13.1
 ELASTICSEARCH_CLUSTER_NAME: elastic-cluster
 ELASTICSEARCH_DISCOVERY_SEED_HOSTS: '["node-1", "node-2"]'
 ELASTICSEARCH_CLUSTER_INITIAL_MASTER_NODES: '["node-1", "node-2"]'
-ELASTICSEARCH_NODES:
-  - { name: node-1, ip: 127.0.0.1 }
-  - { name: node-2, ip: 127.0.0.1 }
 ELASTICSEARCH_NODE_MASTER: true
 ELASTICSEARCH_NODE_DATA: true
 ELASTICSEARCH_NODE_INGEST: true
 ELASTICSEARCH_NODE_ML: false
-
-JVM_HEAP_SIZE: 2g
+ELASTICSEARCH_NODES:
+  - { name: node-1, ip: 127.0.0.1 }
+  - { name: node-2, ip: 127.0.0.1 }
+ELASTICSEARCH_BACKUP_SERVER_IP: 127.0.0.1
+ELASTICSEARCH_BACKUP_SERVER_PATH: /mnt/nfs/elastic
+ELASTICSEARCH_BACKUP_PATH: /mnt/elastic_backup
