add elasticsearch rack

--- a/elasticsearch/defaults/main.yml
+++ b/elasticsearch/defaults/main.yml
@@ -8,6 +8,7 @@ ELASTICSEARCH_NODE_MASTER: true
 ELASTICSEARCH_NODE_DATA: true
 ELASTICSEARCH_NODE_INGEST: true
 ELASTICSEARCH_NODE_ML: false
+ELASTICSEARCH_NODE_ATTR_RACK_ID: rack_one
 ELASTICSEARCH_NODES:
   - { name: node-1, ip: 127.0.0.1 }
   - { name: node-2, ip: 127.0.0.1 }
