--- a/spark_yarn/tasks/config_hadoop.yml
+++ b/spark_yarn/tasks/config_hadoop.yml
@@ -1,5 +1,22 @@
 ---
 
+# echo "export HADOOP_HOME=/opt/hadoop" >> /home/hadoop/.bash_aliases
+# echo "export PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin" >> /home/hadoop/.bash_aliases
+- name: Set hadoop environment
+  tags: [ config ]
+  become: yes
+  lineinfile:
+    path: /home/hadoop/.bash_aliases
+    regexp: "{{ item.key }}"
+    line: "{{ item.value }}"
+    create: yes
+    owner: hadoop
+    group: hadoop
+  with_items:
+    # - { "key": "export HADOOP_HOME=", "value": "/opt/hadoop"}
+    # - { "key": "export LD_LIBRARY_PATH=", "value": "$HADOOP_HOME/lib/native:$LD_LIBRARY_PATH"}
+    - { "key": "/opt/hadoop/bin", "value": "export PATH=$PATH:/opt/hadoop/bin:/opt/hadoop/sbin"}
+
 # sudo mkdir /var/log/hadoop
 # sudo mkdir /var/lib/hadoop
 - name: Create hadoop directories
@@ -24,7 +41,7 @@
     line: "export {{ item.key }}={{ item.value }}"
     insertafter: "{{ item.key }}"
   with_items:
-    - { "key": "JAVA_HOME", "value": "/usr/lib/jvm/java-8-openjdk-amd64"}
+    - { "key": "JAVA_HOME", "value": "/usr/lib/jvm/default-java"}
     - { "key": "HADOOP_LOG_DIR", "value": "/var/log/hadoop"}
     - { "key": "HDFS_NAMENODE_USER", "value": "hadoop"}
     - { "key": "HDFS_DATANODE_USER", "value": "hadoop"}
